<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateStudentsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/toolbar"
            android:layout_marginEnd="8dp"
            android:src="@drawable/people"
            android:translationX="-8dp"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/colleagueDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_toEndOf="@id/imgIcon"
            android:orientation="vertical"
            android:translationX="-8dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/example_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvScoreFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_nim" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnAdd"
        android:layout_below="@id/toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/add_new_score"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_baseline_add_24" />

</RelativeLayout>